Increase the top and bottom margins of the buttons to prevent the buttons in the upper and lower rows from sometimes overlapping.

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ ul#extensions-list li {
 
 button {
   padding: 5px 10px;
-  margin: 0 5px 0 5px;
+  margin: 2px 5px 2px 5px;
   border: none;
   background-color: #4285f4;
   color: #fff;
